Fix error partial, and add form input

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,4 +10,5 @@
     %meta{:name => "viewport", :content => "width=devise-width, initial-scale=1.0"}
     %meta{"http-equiv" => "X-UA-Compatible", :content => "ie=edge"}
   %body
-    = yield
+    .container
+      = yield
