--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,2 +1,8 @@
-%h1= @rep_product.title
-%div= @rep_product.price
+= link_to '<', root_path, class: 'btn btn-default'
+
+%h1= @product.title
+%div= @product.price
+
+-# if merchandiser
+= link_to 'Edit', edit_product_path, class: 'btn btn-default'
+= link_to 'Delete', product_path, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default'
