Add basic color set

--- a/app/javascript/stylesheets/global.scss
+++ b/app/javascript/stylesheets/global.scss
@@ -1,8 +1,1 @@
-.btn-orange {
-  background-color: orange;
-  border-color: darkorange;
-}
-
-.btn-default {
-  border-color: black;
-}
+@import 'colors';
