--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,14 +1,10 @@
 !!!
 %html
   %head
-    %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title Qmon
-    = csrf_meta_tags
-    = csp_meta_tag
-    = stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
-    %meta{:name => "viewport", :content => "width=devise-width, initial-scale=1.0"}
-    %meta{"http-equiv" => "X-UA-Compatible", :content => "ie=edge"}
+    = render 'layouts/head_config'
+    %title Quick shipping QMON
   %body
     .container
+      - flash.each do |name, msg|
+        = content_tag :div, msg, class: "alert alert-#{name}"
       = yield
