--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -3,6 +3,7 @@
 %h1= @product.title
 %div= @product.price
 %div= image_tag @product.image.url
+%div= @product.category.name
 
 -# if merchandiser
 = link_to 'Edit', edit_product_path, class: 'btn btn-default'
