--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -5,6 +5,10 @@
 %div= image_tag @product.image.url
 %div= @product.category.name
 
+- @product.product_items.each do |item|
+  %div= item.title
+  %div= item.price
+
 -# if merchandiser
 = link_to 'Edit', edit_product_path, class: 'btn btn-default'
 = link_to 'Delete', product_path, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default'
