--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -10,6 +10,6 @@
   %div= item.price
   %div= image_tag item.image.url
 
--# if merchandiser
-= link_to 'Edit', edit_product_path, class: 'btn btn-default'
-= link_to 'Delete', product_path, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default'
+- if merchandiser_signed_in?
+  = link_to 'Edit', edit_product_path, class: 'btn btn-default'
+  = link_to 'Delete', product_path, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default'
