--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -5,9 +5,11 @@
     - if merchandiser_signed_in?
       = link_to 'Add product', new_product_path, class: 'btn btn-orange'
       = link_to 'Logout', destroy_merchandiser_session_path, method: :delete, class: 'btn btn-orange'
+    - if customer_signed_in?
+      = link_to 'Logout', destroy_customer_session_path, method: :delete, class: 'btn btn-orange'
     - else
       = link_to 'Registration', static_pages_signup_path, class: 'btn btn-orange'
-      = link_to 'SignIn', new_merchandiser_session_path, class: 'btn btn-orange'
+      = link_to 'SignIn', new_customer_session_path, class: 'btn btn-orange'
     %button.btn.btn-orange cart
   .category
     - category_names.each do |name|
