--- a/app/javascript/stylesheets/global.scss
+++ b/app/javascript/stylesheets/global.scss
@@ -11,3 +11,16 @@
 .form-check-input.string {
   width: 100%;
 }
+
+.white-space-pre {
+  white-space: pre;
+}
+
+.sample-account {
+	border: 1px solid $color-orange;
+	padding: .3rem 1.25rem .3rem 0;
+	border-radius: .3rem;
+	outline: none;
+	display: inline-block;
+	margin: 0.3rem 0;
+}
