--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -5,6 +5,7 @@
       = link_to 'Add product', new_product_path, class: 'btn btn-orange'
       = link_to 'Logout', destroy_merchandiser_session_path, method: :delete, class: 'btn btn-orange'
     - if customer_signed_in?
+      = link_to 'My QMON', customers_profiles_show_path, class: 'btn btn-orange'
       = link_to 'Logout', destroy_customer_session_path, method: :delete, class: 'btn btn-orange'
     - else
       = link_to 'Registration', static_pages_signup_path, class: 'btn btn-orange'
