Add reviews or customer

--- a/app/views/customers/profiles/show.html.haml
+++ b/app/views/customers/profiles/show.html.haml
@@ -2,4 +2,4 @@
   %div= "#{@customer.name}(#{@customer.username})"
   %div Hi!
   = link_to 'Manage My Information', edit_customer_registration_path, class: 'btn btn-transparent'
-  = link_to 'My Reviews', edit_customer_registration_path, class: 'btn btn-transparent'
+  = link_to 'My Reviews', reviews_path, class: 'btn btn-transparent'
