Add customer purchase list show

--- a/app/views/customers/profiles/show.html.haml
+++ b/app/views/customers/profiles/show.html.haml
@@ -1,5 +1,10 @@
-.bg-color-orange
-  %div= "#{@customer.name}(#{@customer.username})"
-  %div Hi!
-  = link_to 'Manage My Information', edit_customer_registration_path, class: 'btn btn-transparent'
-  = link_to 'My Reviews', reviews_path, class: 'btn btn-transparent'
+.bg-color-orange.clearfix
+  .float-left
+    %div= "#{@customer.name}(#{@customer.username})"
+    %div Hi!
+  .float-right= link_to 'Manage My Information', edit_customer_registration_path, class: 'btn btn-transparent'
+  .float-right= link_to 'My Reviews', reviews_path, class: 'btn btn-transparent'
+%div Recent Purchase
+.recent-purchases
+  - @purchases.each do |purchase|
+    = render 'purchases/purchase', purchase: purchase
