--- a/app/views/purchases/_purchase.html.haml
+++ b/app/views/purchases/_purchase.html.haml
@@ -10,4 +10,5 @@
       %div= "#{order.title}(Buy: #{order.quantity})"
       %div= order.price
       = link_to 'Refund', root_path
-      = link_to 'Write Review', new_review_path(product_id: order.product_id), class: 'btn btn-orange'
+      = link_to 'Write Review', new_product_item_review_path(order_id: order.id, product_item_id: order.product_item_id),
+        class: 'btn btn-orange'
