--- a/app/views/purchases/_new_purchase.html.haml
+++ b/app/views/purchases/_new_purchase.html.haml
@@ -11,3 +11,4 @@
       %div.clearfix{ 'data-target': 'nested-form.add_item' }
         = link_to 'more', '#', data: { action: 'nested-form#add_association' }, class: 'btn btn-default add-button float-right'
   = f.button :submit, 'Proceed payment', class: 'btn btn-orange'
+  = f.button :submit, 'Save in Shopping Cart', class: 'btn btn-orange'
