--- a/app/views/products/_header.html.haml
+++ b/app/views/products/_header.html.haml
@@ -1,15 +1,16 @@
-.header-bar
-  .input search
-  - if merchandiser_signed_in?
-    = link_to 'Add product', new_product_path, class: 'btn btn-orange'
-    = link_to 'Logout', destroy_merchandiser_session_path, method: :delete, class: 'btn btn-orange'
-  - if customer_signed_in?
-    = link_to 'My QMON', customers_profiles_show_path, class: 'btn btn-orange'
-    = link_to 'Cart', shopping_carts_path, class: 'btn btn-orange'
-    = link_to 'Logout', destroy_customer_session_path, method: :delete, class: 'btn btn-orange'
-  - else
-    = link_to 'Registration', static_pages_signup_path, class: 'btn btn-orange'
-    = link_to 'SignIn', new_customer_session_path, class: 'btn btn-orange'
+.header-bar.d-flex.justify-content-between
+  .input.mx-auto search
+  .buttons
+    - if merchandiser_signed_in?
+      = link_to 'Add product', new_product_path, class: 'btn btn-orange'
+      = link_to 'Logout', destroy_merchandiser_session_path, method: :delete, class: 'btn btn-orange'
+    - if customer_signed_in?
+      = link_to 'My QMON', customers_profiles_show_path, class: 'btn btn-orange'
+      = link_to 'Cart', shopping_carts_path, class: 'btn btn-orange'
+      = link_to 'Logout', destroy_customer_session_path, method: :delete, class: 'btn btn-orange'
+    - else
+      = link_to 'Registration', static_pages_signup_path, class: 'btn btn-orange'
+      = link_to 'SignIn', new_customer_session_path, class: 'btn btn-orange'
 .category
   - category_names.each do |name|
     = link_to name.capitalize, products_path(category: name), class: 'btn btn-secondary'
