--- a/app/views/reviews/_review.html.haml
+++ b/app/views/reviews/_review.html.haml
@@ -1,7 +1,7 @@
 .review
-  .text-secondary= review.product.title
+  .text-secondary= review.product_title
   %h4= review.body
   %div= review.rating
-  %div= review.customer.name
+  %div= review.author
   - if review.image
     -# = image_tag review.image.url
