Add header yield, Update profile bought items

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,5 @@
-= link_to 'QMON', root_path, class: 'brand'
-= yield(:title)
+.header.container.clearfix
+  .float-left.btn= link_to 'QMON', root_path, class: 'brand'
+  = render yield(:header) unless yield(:header).empty?
 - if customer_signed_in? && yield(:shopping_cart) == true
   = link_to 'Shopping Cart', shopping_carts_path, class: 'btn btn-orange'
