--- a/app/views/products/_header.html.haml
+++ b/app/views/products/_header.html.haml
@@ -1,4 +1,4 @@
-.header-bar.d-flex.justify-content-between
+.products-header.d-flex.justify-content-between
   .input.mx-auto search
   .buttons
     - if merchandiser_signed_in?
