--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,5 +1,5 @@
 .main-page
-  - provide(:header, 'products/header')
+  - provide(:header, 'index_header')
   .ad-image-animation
   .product-list
     = render @products
