--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,6 +1,6 @@
-= link_to '<', root_path, class: 'btn btn-default'
+- provide(:header, 'back')
 
-.product
+.product-basic-info
   %div= image_tag @product.image.url
   %h4= @product.title
   %div.clearfix
@@ -8,7 +8,7 @@
       %h2= "₩ #{@product.price}"
     .float-right
       %div= "#{@product.product_items.sum{ |item| item.buy_amount } } Buy"
-%div= "shipping info: #{@product.shipping_fee.zero? ? 'free shipping' : 'paid delivery'}"
+%h4= "#{@product.shipping_fee.zero? ? 'Free Shipping' : "Delivery Fee: ₩ #{@product.shipping_fee}"}"
 
 .d-flex
   #product-items-toggle.product-items-toggle.w-50.btn.btn-orange Product Items
@@ -18,14 +18,13 @@
   = "Reviews #{@reviews.size}"
   = render @reviews
 
-#product-items.product-items
-  %div Product Info
-  %div= @product.category.name
-
+#product-items.product-items.my-3
   - @product.product_items.each do |item|
-    %div= item.title
-    %div= item.price
-    %div= image_tag item.image.url
+    .product.mx-3.clearfix
+      .float-left= image_tag item.image.url
+      .float-right
+        %div= item.title
+        %div= item.price
 
   - if customer_signed_in?
     = render partial: 'purchases/new_purchase', locals: { product_items: @product.product_items }
