--- a/app/views/purchases/_order_fields.html.haml
+++ b/app/views/purchases/_order_fields.html.haml
@@ -1,4 +1,4 @@
-= content_tag :div, class: 'nested-fields clearfix form-inline' do
+= content_tag :div, class: 'nested-fields float-left form-inline clearfix' do
   = f.hidden_field :_destroy
   = f.select :product_item_id, product_items.map { |p| [p.title, p.id, { id: "order_#{p.id}" }] }
   = f.input :quantity, collection: 1..10, default: 1, label: false
